Fix footer spacing problem on Safari

--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -20,6 +20,7 @@ footer nav {
     justify-content: space-between;
 
     grid-gap: 2em;
+    gap: 2em;
 }
 
 footer a {
